--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-animate": "~1.2.0",
     "angular-touch": "~1.2.0",
     "angular-route": "~1.2.0",
-    "angular-mocks": "~1.3.0"
+    "angular-mocks": "~1.3.0",
+    "normalize.css": "~3.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
