--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-touch": "~1.2.0",
     "angular-route": "~1.2.0",
     "angular-mocks": "~1.3.0",
-    "normalize.css": "~3.0.2"
+    "normalize.css": "~3.0.2",
+    "ng-debounce": "~0.1.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
