--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "blloon-search",
   "version": "0.0.0",
   "dependencies": {
+    "jquery": "~2.1.1",
     "angular": "~1.2.0",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
@@ -10,9 +11,10 @@
     "angular-animate": "~1.2.0",
     "angular-touch": "~1.2.0",
     "angular-route": "~1.2.0",
-    "angular-mocks": "~1.3.0",
     "normalize.css": "~3.0.2",
-    "ng-debounce": "~0.1.5"
+    "ngInfiniteScroll": "~1.1.2",
+    "ng-debounce": "~0.1.5",
+    "ng-lodash": "~0.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
