--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
     "ng-debounce": "~0.1.5",
     "ng-lodash": "~0.0.2",
     "angular-ui-router": "~0.2.11",
-    "ui-router-extras": "~0.0.10",
+    "ui-router-extras": "dubadub/ui-router-extras#f87ddeedbeab9d74be588336d7f68f074382f051",
     "angular-bootstrap": "~0.11.2",
     "angular-truncate": "*"
   },
